Forwarding servers replaced with CF and Quad9

--- a/knot-resolver/kresd.conf
+++ b/knot-resolver/kresd.conf
@@ -10,13 +10,13 @@ function interp(s, tab)
   return (s:gsub('($%b{})', function(w) return tab[w:sub(3, -2)] or w end))
 end
 
--- Forwards DNS to Incognit.co
+-- Forwards DNS to CF and Quad9
 policy.add(policy.all(policy.TLS_FORWARD({
-         { '152.53.1.11', hostname='dns.incognit.co', ca_file='/etc/ssl/certs/ca-certificates.crt' },
+         { '1.1.1.1', hostname='one.one.one.one', ca_file='/etc/ssl/certs/ca-certificates.crt' },
 })))
 
 policy.add(policy.all(policy.TLS_FORWARD({
-         { '152.53.2.243', hostname='dns.incognit.co', ca_file='/etc/ssl/certs/ca-certificates.crt' },
+         { '9.9.9.9', hostname='dns.quad9.net', ca_file='/etc/ssl/certs/ca-certificates.crt' },
 })))
 
 -- Reroute subnet list to IP
